@@ -1,3 +1,8 @@
+2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* libfs/src/nfsclient/src/nfs.c: readlink filesystem entry should
+	return ssize_t.
+
 2010-12-28	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* libfs/src/dosfs/msdos_misc.c: Create short file names acceptable for
